--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -77,3 +77,35 @@ body
 .audio__item
     display: inline-block
     
+.footer
+    display: flex
+    background: #000
+    height: 150px
+    margin: 0 auto
+    justify-content: space-around
+    align-items: center
+    &__media
+        display: flex
+        justify-content: space-around
+    &__official
+        flex-direction: none
+        color: red
+    &__copy
+        color: red
+.media__items
+    &__1
+        width: 24px
+        height: 24px
+        background: url('../img/icon_1.png')
+    &__2
+        width: 24px
+        height: 24px
+        background: url('../img/icon_2.png')
+    &__3
+        width: 24px
+        height: 24px
+        background: url('../img/icon_3.png')
+    &__4
+        width: 24px
+        height: 24px
+        background: url('../img/icon_4.png')
