--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -25,6 +25,7 @@ body
     color: #fff
     text-align: center
     text-shadow: 0 0 12px #000
+    padding-bottom: 50px
 
 .header
     &__banner
@@ -70,28 +71,58 @@ body
     margin: 160px 20px 20px
     padding-bottom: 20px  
     width: 900px
-    margin: 0 auto 
+    margin: 0 auto
     &__audio
         margin-top: 70px
-        margin: 0 auto
+
 .audio__item
-    display: inline-block
+    display: block
+    padding: 10px
+    justify-content: center
     
+
+
+.video
+    margin: 160px 20px 20px
+    padding-bottom: 20px  
+    margin: 0 auto
+    &__content
+        display: flex
+        width: 900px
+        margin: 0 auto
+        justify-content: center
+iframe
+    width: 500px
+    height: 250px
+    padding: 5px
+    justify-content: space-between
+    margin-top: 90px
+
+
 .footer
-    display: flex
-    background: #000
+    background: rgba(0, 0, 0, 0.5)
     height: 150px
     margin: 0 auto
-    justify-content: space-around
-    align-items: center
+    justify-content: center
     &__media
+        width: 900px
         display: flex
         justify-content: space-around
+        margin: 0 auto
     &__official
-        flex-direction: none
+        text-decoration: none
+        width: 300px
         color: red
+        margin: 0 auto
     &__copy
         color: red
+        width: 300px
+        display: flex
+        margin: 0 auto
+    &__links
+        width: 300px
+
+
 .media__items
     &__1
         width: 24px
