--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap')
 
 body
-    background-image: linear-gradient(90deg, #000000 0%, #552323 70%, #fc0808 90%)
+    background-image: linear-gradient(90deg, #000000 0%, #1d2d35 70%, #097891 90%)
     max-width: 1520px
 .title
     font-size: 70px
@@ -92,7 +92,9 @@ body
         margin: 0 auto
         justify-content: center
 iframe
-    aspect-ratio: 16 / 9
+    width: 440px
+    height: 250px
+    object-fit: cover
     padding: 5px
     justify-content: space-between
     margin-top: 90px
