--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1,12 +1,13 @@
 @import nullstyle.sass
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap')
 
+$main: #999696
 body
-    background-image: linear-gradient(90deg, #000000 0%, #1d2d35 70%, #097891 90%)
+    background-image: linear-gradient(90deg, #000000 0%, #140f38 30% #274ca1 60%, #064cf1 80%, #181b5e)
     max-width: 1520px
 .title
     font-size: 70px
-    color: #fff
+    color: $main
     font-weight: 900
     text-shadow: 0 0 12px #000
     text-align: center
@@ -14,7 +15,7 @@ body
 .subtitle
     margin-top: 30px
     font-size: 20px   
-    color: #fff
+    color: $main
     font-weight: 700
     text-shadow: 0 0 12px #000
     text-align: center
@@ -22,7 +23,7 @@ body
     margin-top: 100px
     font-size: 14px
     font-weight: 300
-    color: #fff
+    color: $main
     text-align: center
     text-shadow: 0 0 12px #000
     padding-bottom: 50px
@@ -39,12 +40,12 @@ body
         font-weight: 900
         justify-content: space-between
         text-shadow: 0 0 12px #000
-        color: #fff
+        color: $main
         margin-left: 360px
         top: 320px
 .item__menu
     &:hover
-        color: #521f1f         
+        color: #ffffff         
         text-shadow: 0 0 2px #fff
 .album
     margin: 160px 20px 20px
@@ -77,67 +78,49 @@ body
 
 .audio__item
     display: block
-    padding: 10px
-    justify-content: center
-    
+    padding: 10px 300px
+    margin: 0 auto
 
 
-.video
-    margin: 160px 20px 20px
-    padding-bottom: 20px  
+.video 
+    width: 1200px
     margin: 0 auto
     &__content
-        display: flex
-        max-width: 900px
-        margin: 0 auto
-        justify-content: center
-iframe
-    width: 440px
-    height: 250px
-    object-fit: cover
-    padding: 5px
-    justify-content: space-between
-    margin-top: 90px
+        margin-top: 90px
+        
+.iframe
+    
 
+    
 
 .footer
     background: rgba(0, 0, 0, 0.5)
     height: 150px
-    margin: 0 auto
-    justify-content: center
     &__media
-        max-width: 900px
-        display: flex
-        justify-content: space-around
+        width: 900px
         margin: 0 auto
+        display: flex
+        padding-top: 63px
+        
     &__official
         text-decoration: none
         width: 300px
-        color: red
         margin: 0 auto
+        padding-top: 50px
     &__copy
-        color: red
         width: 300px
         display: flex
         margin: 0 auto
+        padding: 0
     &__links
+        display: flex
         width: 300px
+        justify-content: space-around
 
 
 .media__items
-    &__1
-        width: 24px
-        height: 24px
-        background: url('../img/icon_1.png')
+    &__1  
     &__2
-        width: 24px
-        height: 24px
-        background: url('../img/icon_2.png')
     &__3
-        width: 24px
-        height: 24px
-        background: url('../img/icon_3.png')
     &__4
-        width: 24px
-        height: 24px
-        background: url('../img/icon_4.png')
+       
