--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -90,8 +90,16 @@ body
         
 .iframe
     
-
-    
+.concerts
+    &__table
+        display: block
+        width: 900px
+        justify-content: center
+        margin: 0 auto
+        padding-top: 80px
+.table__body
+td
+    padding: 0 110px   
 
 .footer
     background: rgba(0, 0, 0, 0.5)
